# src/MooBank.Api/openapi-v1.json
@@ -6716,6 +6716,7 @@
         "required": [
           "date",
           "accountName",
+          "usageType",
           "averagePricePerUnit",
           "totalUsage"
         ],
@@ -6727,6 +6728,9 @@
           },
           "accountName": {
             "type": "string"
+          },
+          "usageType": {
+            "$ref": "#/components/schemas/UsageType"
           },
           "averagePricePerUnit": {
             "type": "number",
@@ -8365,8 +8369,7 @@
         "required": [
           "periodStart",
           "periodEnd",
-          "pricePerUnit",
-          "totalUsage",
+          "usages",
           "serviceCharges"
         ],
         "type": "object",
@@ -8393,20 +8396,11 @@
             ],
             "format": "int32"
           },
-          "pricePerUnit": {
-            "type": "number",
-            "format": "double"
-          },
-          "totalUsage": {
-            "type": "number",
-            "format": "double"
-          },
-          "cost": {
-            "type": [
-              "null",
-              "number"
-            ],
-            "format": "double"
+          "usages": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Usage"
+            }
           },
           "serviceCharges": {
             "type": "array",
@@ -11061,10 +11055,39 @@
           }
         }
       },
+      "Usage": {
+        "required": [
+          "usageType",
+          "pricePerUnit",
+          "totalUsage"
+        ],
+        "type": "object",
+        "properties": {
+          "usageType": {
+            "$ref": "#/components/schemas/UsageType"
+          },
+          "pricePerUnit": {
+            "type": "number",
+            "format": "double"
+          },
+          "totalUsage": {
+            "type": "number",
+            "format": "double"
+          },
+          "cost": {
+            "type": [
+              "null",
+              "number"
+            ],
+            "format": "double"
+          }
+        }
+      },
       "UsageDataPoint": {
         "required": [
           "date",
           "accountName",
+          "usageType",
           "usagePerDay"
         ],
         "type": "object",
@@ -11075,6 +11098,9 @@
           },
           "accountName": {
             "type": "string"
+          },
+          "usageType": {
+            "$ref": "#/components/schemas/UsageType"
           },
           "usagePerDay": {
             "type": "number",
@@ -11105,6 +11131,12 @@
             }
           }
         }
+      },
+      "UsageType": {
+        "enum": [
+          "Consumption",
+          "Export"
+        ]
       },
       "User": {
         "required": [
