# src/MooBank.Domain/Entities/Utility/Specifications/BillDetailsSpecification.cs
@@ -5,7 +5,7 @@ namespace Asm.MooBank.Domain.Entities.Utility.Specifications;
 public class BillDetailsSpecification : ISpecification<Bill>
 {
     public IQueryable<Bill> Apply(IQueryable<Bill> query) =>
-        query.Include(b => b.Periods).ThenInclude(p => p.Usage)
+        query.Include(b => b.Periods).ThenInclude(p => p.Usages)
              .Include(b => b.Periods).ThenInclude(p => p.ServiceCharges).ThenInclude(sc => sc.ChargeType)
              .Include(b => b.Discounts);
 }
